# multi-agent-clinical-trial-simulator

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py
src/agents/: __init__.py  adverse_event_agent.py  drug_interaction_agent.py  patient_population_agent.py  regulatory_agent.py
src/api/: __init__.py  main.py
src/core/: __init__.py  config.py  logging_service.py
src/database/: __init__.py  models.py  repository.py
tests/: conftest.py  test_agents.py  test_api.py
