[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-trial-simulator"
version = "1.0.0"
description = "Digital twin of patient populations for clinical trial simulation using multi-agent AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ClinicalMind Team", email = "contact@clinicalmind.ai"}
    ]
    keywords = [
        "clinical-trials",
            "multi-agent",
                "ai",
                    "healthcare",
                        "drug-interaction",
                            "adverse-events",
                                "digital-twin"
                                ]
                                classifiers = [
                                    "Development Status :: 4 - Beta",
                                        "Intended Audience :: Healthcare Industry",
                                            "Intended Audience :: Science/Research",
                                                "License :: OSI Approved :: MIT License",
                                                    "Programming Language :: Python :: 3",
                                                        "Programming Language :: Python :: 3.10",
                                                            "Programming Language :: Python :: 3.11",
                                                                "Programming Language :: Python :: 3.12",
                                                                    "Topic :: Scientific/Engineering :: Medical Science Apps.",
                                                                    ]
                                                                    dependencies = [
                                                                        "fastapi>=0.109.0",
                                                                            "uvicorn>=0.27.0",
                                                                                "pydantic>=2.5.0",
                                                                                    "pydantic-settings>=2.1.0",
                                                                                        "sqlalchemy>=2.0.0",
                                                                                            "google-generativeai>=0.3.0",
                                                                                                "httpx>=0.26.0",
                                                                                                    "python-dotenv>=1.0.0",
                                                                                                        "structlog>=24.1.0",
                                                                                                        ]
                                                                                                        
                                                                                                        [project.optional-dependencies]
                                                                                                        dev = [
                                                                                                            "pytest>=7.4.0",
                                                                                                                "pytest-cov>=4.1.0",
                                                                                                                    "pytest-asyncio>=0.23.0",
                                                                                                                        "black>=24.1.0",
                                                                                                                            "ruff>=0.1.0",
                                                                                                                                "mypy>=1.8.0",
                                                                                                                                    "pre-commit>=3.6.0",
                                                                                                                                        "httpx>=0.26.0",
                                                                                                                                        ]
                                                                                                                                        docs = [
                                                                                                                                            "mkdocs>=1.5.0",
                                                                                                                                                "mkdocs-material>=9.5.0",
                                                                                                                                                    "mkdocstrings[python]>=0.24.0",
                                                                                                                                                    ]
                                                                                                                                                    
                                                                                                                                                    [project.urls]
                                                                                                                                                    Homepage = "https://github.com/minalkharat-cmd/multi-agent-clinical-trial-simulator"
                                                                                                                                                    Documentation = "https://github.com/minalkharat-cmd/multi-agent-clinical-trial-simulator#readme"
                                                                                                                                                    Repository = "https://github.com/minalkharat-cmd/multi-agent-clinical-trial-simulator.git"
                                                                                                                                                    Issues = "https://github.com/minalkharat-cmd/multi-agent-clinical-trial-simulator/issues"
                                                                                                                                                    
                                                                                                                                                    [tool.setuptools.packages.find]
                                                                                                                                                    where = ["."]
                                                                                                                                                    include = ["src*"]
                                                                                                                                                    
                                                                                                                                                    [tool.black]
                                                                                                                                                    line-length = 88
                                                                                                                                                    target-version = ['py310', 'py311', 'py312']
                                                                                                                                                    include = '\.pyi?$'
                                                                                                                                                    extend-exclude = '''
                                                                                                                                                    /(
                                                                                                                                                        \.eggs
                                                                                                                                                            | \.git
                                                                                                                                                                | \.hg
                                                                                                                                                                    | \.mypy_cache
                                                                                                                                                                        | \.tox
                                                                                                                                                                            | \.venv
                                                                                                                                                                                | _build
                                                                                                                                                                                    | buck-out
                                                                                                                                                                                        | build
                                                                                                                                                                                            | dist
                                                                                                                                                                                            )/
                                                                                                                                                                                            '''
                                                                                                                                                                                            
                                                                                                                                                                                            [tool.ruff]
                                                                                                                                                                                            line-length = 88
                                                                                                                                                                                            target-version = "py310"
                                                                                                                                                                                            select = [
                                                                                                                                                                                                "E",   # pycodestyle errors
                                                                                                                                                                                                    "W",   # pycodestyle warnings
                                                                                                                                                                                                        "F",   # Pyflakes
                                                                                                                                                                                                            "I",   # isort
                                                                                                                                                                                                                "B",   # flake8-bugbear
                                                                                                                                                                                                                    "C4",  # flake8-comprehensions
                                                                                                                                                                                                                        "UP",  # pyupgrade
                                                                                                                                                                                                                        ]
                                                                                                                                                                                                                        ignore = [
                                                                                                                                                                                                                            "E501",  # line too long (handled by black)
                                                                                                                                                                                                                                "B008",  # do not perform function calls in argument defaults
                                                                                                                                                                                                                                ]
                                                                                                                                                                                                                                
                                                                                                                                                                                                                                [tool.ruff.per-file-ignores]
                                                                                                                                                                                                                                "__init__.py" = ["F401"]  # unused imports in __init__.py
                                                                                                                                                                                                                                
                                                                                                                                                                                                                                [tool.mypy]
                                                                                                                                                                                                                                python_version = "3.10"
                                                                                                                                                                                                                                warn_return_any = true
                                                                                                                                                                                                                                warn_unused_configs = true
                                                                                                                                                                                                                                disallow_untyped_defs = true
                                                                                                                                                                                                                                ignore_missing_imports = true
                                                                                                                                                                                                                                
                                                                                                                                                                                                                                [tool.pytest.ini_options]
                                                                                                                                                                                                                                minversion = "7.0"
                                                                                                                                                                                                                                addopts = "-ra -q --cov=src --cov-report=term-missing"
                                                                                                                                                                                                                                testpaths = ["tests"]
                                                                                                                                                                                                                                asyncio_mode = "auto"
                                                                                                                                                                                                                                
                                                                                                                                                                                                                                [tool.coverage.run]
                                                                                                                                                                                                                                source = ["src"]
                                                                                                                                                                                                                                branch = true
                                                                                                                                                                                                                                
                                                                                                                                                                                                                                [tool.coverage.report]
                                                                                                                                                                                                                                exclude_lines = [
                                                                                                                                                                                                                                    "pragma: no cover",
                                                                                                                                                                                                                                        "def __repr__",
                                                                                                                                                                                                                                            "raise AssertionError",
                                                                                                                                                                                                                                                "raise NotImplementedError",
                                                                                                                                                                                                                                                ]
